samples/kubernetes/nginx-ingress/name-based-virtual-hosting.yaml
# foo.bar.com --|                 |-> foo.bar.com s1:80
#               | 178.91.123.132  |
# bar.foo.com --|                 |-> bar.foo.com s2:80
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
