samples/kubernetes/nginx-ingress/simple-fanout.yaml
# foo.bar.com -> 178.91.123.132 -> / foo    service1:4200
#                                  / bar    service2:8080
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 4200
      - path: /bar
        backend:
          serviceName: service2
          servicePort: 8080
